--- a/index.html
+++ b/index.html
@@ -24,15 +24,21 @@
       </div>
 
       <div class='header-buttons'>
-        <button>
+        <button style="margin-left:16px">
           <i id='pause-button' class='material-icons'>
             pause
           </i>
         </button>
-        <button>
+        <button style="margin-left:8px">
           <i id='sound-button' class='material-icons'></i>
         </button>
-      </div>
+        <div style="flex-grow: 1;"></div>
+        <a href='https://github.com/bward2/pacman-js' target="_blank" style="text-decoration: none;">
+          <button style="margin-right:16px">
+            <i id='git-button' class='material-icons'></i>
+          </button>
+        </a>
+        </div>
 
       <div id='paused-text' class='paused-text'>
         PAUSED
